Fix HPO contact box being cut off by new sticky header

--- a/core/sass/pages/invest/_hpo-detail-page.scss
+++ b/core/sass/pages/invest/_hpo-detail-page.scss
@@ -14,8 +14,6 @@
 
   .contact-section {
     position: relative;
-    width: 100%;
-    top: 10px;
     z-index: 1;
   }
 
@@ -38,10 +36,17 @@
 
   .proposition-list-item {
     border-top: 4px solid $flag-red;
+    margin-bottom: $spacing-3;
+
+    & > *:first-child {
+      margin-top: $spacing-4;
+    }
   }
 
   .proposition-two-grid {
     flex-direction: row;
+    margin-left: -15px;
+    margin-right: -15px;
   }
 
   @media(max-width: 640px) {
